--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,9 +10,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-  # jobs:
-    # pre_build:
-    # - pip install .
+  jobs:
+    pre_build:
+    - pip install .
     
 
 submodules:
