split cpp into binds code and source code

--- a/src/binds/CMakeLists.txt
+++ b/src/binds/CMakeLists.txt
@@ -1,4 +1,10 @@
 file(GLOB_RECURSE H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
 file(GLOB_RECURSE CPP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
+file(GLOB_RECURSE PY_CPP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.py.cpp)
+
+
+pybind11_add_module(cpp pytherm.py.cpp)
 
 include_directories(PRIVATE ${PROJECT_SOURCE_DIR}/src)
+
+install(TARGETS cpp DESTINATION pytherm)
