--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,6 @@ keywords = ["chemistry",]
 authors = [
   {name = "Ignaty Efimov", email = "efimov.ignaty@gmail.com"}
 ]
-repository = "https://github.com/PsiXYZ/pytherm"
-documentation = "https://pytherm.readthedocs.io/en/latest/"
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Education",
@@ -21,12 +19,16 @@ classifiers = [
 dependencies = [
   "numpy"
 ]
+readme = "README.rst"
+
+[project.urls]
+Repository = "https://github.com/PsiXYZ/pytherm"
+Documentation = "https://pytherm.readthedocs.io/en/latest/"
 
 [build-system]
 requires = ["scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
-cmake.minimum-version = "3.26"
-cmake.build-type = "Release"
+cmake.build-type = "Debug"
 build-dir = "./build"
